Fix compilation issues due
- Somethings compile in IDE but do not compile in editor packaged build due to difference in header files

--- a/.cvignore
+++ b/.cvignore
@@ -13,6 +13,7 @@ Intermediate/ProjectFiles
 Intermediate/ReimportCache
 Intermediate/ShaderAutogen
 Intermediate/CachedAssetRegistry.bin
+Publish
 Plugins/Developer
 Saved/Autosaves
 Saved/AutoScreenshot.png
