--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -128,7 +128,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.WorldPartition.None,WorldSettings.GameMode.SelectedGameModeDetails,
-WorldPartitionRuntimeSpatialHash=
+WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartition.None,WorldSettings.GameMode.SelectedGameModeDetails,
 BoxComponent=BoxComponent.Collision.Collision,
 StaticMeshActor=StaticMeshActor.Physics.ConstraintsGroup,
 StaticMesh=StaticMesh.ImportSettings.Transform,
@@ -1355,8 +1355,8 @@ WorldPartitionMiniMap="\"Object\" "
 BillboardComponent="\"Object\" "
 
 [MRU]
-MRUItem0=/Game/Maps/Level2
-MRUItem1=/Game/Maps/0_MenuMap
+MRUItem0=/Game/Maps/0_MenuMap
+MRUItem1=/Game/Maps/Level2
 MRUItem2=/Game/Maps/Level_2
 MRUItem3=/Game/Maps/Prototypes/ThirdPersonTemplate
 MRUItem4=/Game/Maps/Prototypes/ThirdPersonTemplate_WithoutFloor
@@ -1524,8 +1524,8 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Maps/Level2
-MRUItem1=/Game/Maps/0_MenuMap
+MRUItem0=/Game/Maps/0_MenuMap
+MRUItem1=/Game/Maps/Level2
 MRUItem2=/Game/ModuleEITP/Blueprints/ThirdPersonCharacter
 MRUItem3=/Game/Maps/Level_2
 MRUItem4=/Game/Maps/Prototypes/ThirdPersonTemplate
@@ -2462,7 +2462,7 @@ MovieSceneCapture.TimeStamp=2022.09.29-01.19.34
 MovieSceneCapture.LastCompileMethod=Unknown
 BlueprintGraph.TimeStamp=2022.09.29-01.19.28
 BlueprintGraph.LastCompileMethod=Unknown
-TheSimulation.TimeStamp=2022.10.10-22.13.10
+TheSimulation.TimeStamp=2022.10.10-22.22.19
 TheSimulation.LastCompileMethod=External
 RD.TimeStamp=2022.10.09-23.57.11
 RD.LastCompileMethod=Unknown
@@ -2506,7 +2506,7 @@ bHighlightSelectedDataLayers=True
 bDisableLoadingOfLastLoadedCells=False
 bBugItGoLoadCells=False
 bShowCellCoords=False
-PerWorldEditorSettings=(("/Game/LevelPrototyping/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/Maps/Prototypes/ThirdPersonMap.ThirdPersonMap", ()),("/Game/Maps/Level_23.Level_23", (NotLoadedDataLayers=("DataLayer_731AA4D44C6AC42DB87036A75E53A82A"))),("/Game/Maps/Level2.Level2", (LoadedEditorGridCells=("EditorCell_S12800_X-1_Y0_Z-1","EditorCell_S12800_X0_Y0_Z-1","EditorCell_S12800_X0_Y0_Z0"))),("/Game/Maps/Level2.Level2", ()))
+PerWorldEditorSettings=(("/Game/LevelPrototyping/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/Maps/Prototypes/ThirdPersonMap.ThirdPersonMap", ()),("/Game/Maps/Level_23.Level_23", (NotLoadedDataLayers=("DataLayer_731AA4D44C6AC42DB87036A75E53A82A"))),("/Game/Maps/Level2.Level2", (LoadedEditorGridCells=("EditorCell_S12800_X0_Y0_Z-1","EditorCell_S12800_X-1_Y0_Z-1","EditorCell_S12800_X0_Y0_Z0"))))
 
 [SuppressableDialogs]
 RemoveLevelWarning=False
