--- a/Saved/Config/WindowsEditor/Game.ini
+++ b/Saved/Config/WindowsEditor/Game.ini
@@ -1,11 +1,11 @@
 [/Script/UnrealEd.ProjectPackagingSettings]
-PerPlatformBuildConfig=()
+PerPlatformBuildConfig=(("Windows", PPBC_Shipping))
 PerPlatformTargetFlavorName=(("Android", "Android_ASTC"))
 PerPlatformBuildTarget=()
 Build=IfProjectHasCode
 BuildTarget=
 LaunchOnTarget=
-StagingDirectory=(Path="")
+StagingDirectory=(Path="E:/DAUENoVC/TheSimulation/Publish")
 ForDistribution=False
 IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
