[Level 2] Dynamically adjust trick platform

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -128,13 +128,13 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.WorldPartition.None,WorldSettings.GameMode.SelectedGameModeDetails,
-WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartition.None,WorldSettings.GameMode.SelectedGameModeDetails,
+WorldPartitionRuntimeSpatialHash=
 BoxComponent=BoxComponent.Collision.Collision,
 StaticMeshActor=StaticMeshActor.Physics.ConstraintsGroup,
 StaticMesh=StaticMesh.ImportSettings.Transform,
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Surface Properties,
 MaterialInstanceConstant=
-StaticMeshComponent=StaticMeshActor.Physics.ConstraintsGroup,
+StaticMeshComponent=
 GoalReach=StaticMeshActor.Physics.ConstraintsGroup,
 LevelInstance=StaticMeshActor.Physics.ConstraintsGroup,
 LevelInstanceComponent=
@@ -149,7 +149,7 @@ DirectionalLight=StaticMeshActor.Physics.ConstraintsGroup,
 PostProcessVolume=StaticMeshActor.Physics.ConstraintsGroup,
 VolumetricCloud=StaticMeshActor.Physics.ConstraintsGroup,
 ExponentialHeightFog=StaticMeshActor.Physics.ConstraintsGroup,
-TriggerBox=StaticMeshActor.Physics.ConstraintsGroup,
+TriggerBox=StaticMeshActor.Physics.ConstraintsGroup,TriggerBox.Physics.ConstraintsGroup,
 WorldPartitionMiniMap=StaticMeshActor.Physics.ConstraintsGroup,
 BillboardComponent=
 
@@ -159,14 +159,14 @@ LastLevel=/Game/Maps/0_MenuMap
 [DetailCategories]
 WorldSettings.PrecomputedVisibility=True
 WorldSettings.GameMode=True
-WorldSettings.Lightmass=False
+WorldSettings.Lightmass=True
 WorldSettings.World=True
 WorldSettings.Physics=True
 WorldPartitionRuntimeSpatialHash.RuntimeSettings=True
 WorldSettings.WorldPartition=True
-WorldSettings.Broadphase=False
-WorldSettings.Foliage=False
-WorldSettings.Navigation=False
+WorldSettings.Broadphase=True
+WorldSettings.Foliage=True
+WorldSettings.Navigation=True
 WorldSettings.VR=True
 WorldSettings.Rendering=True
 WorldSettings.Audio=True
@@ -1106,9 +1106,20 @@ Blueprint.ClassOptions=True
 Blueprint.BlueprintOptions=True
 Blueprint.Interfaces=True
 Blueprint.Thumbnail=True
+Level2_C.Tick=True
+Level2_C.Replication=True
+Level2_C.Actor=True
+Level2_C.HLOD=True
+Level2_C.Input=True
+Level2_C.Level2=True
+Level2_C.WorldPartition=True
+Level2_C.Events=True
+K2Node_CustomEvent.GraphNodeDetail=True
+TriggerBox.Mobile=True
+TriggerBox.AssetUserData=True
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [PluginBrowser]
 InstalledPlugins=BlockoutToolsPlugin
@@ -1134,10 +1145,10 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [DetailPropertyExpansion]
-WorldSettings="\"Object\" \"Object.World.NavigationSystemConfig\" \"Object.Lightmass.LightmassSettings\" \"Object.Broadphase.BroadphaseSettings\" \"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" \"Object.Audio.DefaultReverbSettings\" \"Object.Audio.DefaultAmbientZoneSettings\" "
-Info="\"Object\" \"Object.World.NavigationSystemConfig\" \"Object.Lightmass.LightmassSettings\" \"Object.Broadphase.BroadphaseSettings\" \"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" \"Object.Audio.DefaultReverbSettings\" \"Object.Audio.DefaultAmbientZoneSettings\" "
-WorldPartitionRuntimeSpatialHash="\"Object\" "
-WorldPartitionRuntimeHash="\"Object\" "
+WorldSettings="\"Object\" \"Object.World.NavigationSystemConfig\" \"Object.Lightmass.LightmassSettings\" \"Object.Broadphase.BroadphaseSettings\" \"Object.Audio.DefaultReverbSettings\" \"Object.Audio.DefaultAmbientZoneSettings\" "
+Info="\"Object\" \"Object.World.NavigationSystemConfig\" \"Object.Lightmass.LightmassSettings\" \"Object.Broadphase.BroadphaseSettings\" \"Object.Audio.DefaultReverbSettings\" \"Object.Audio.DefaultAmbientZoneSettings\" "
+WorldPartitionRuntimeSpatialHash="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" "
+WorldPartitionRuntimeHash="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" "
 Object="\"Object\" "
 InputTriggerDown="\"Object\" "
 InputTrigger="\"Object\" "
@@ -1355,13 +1366,13 @@ WorldPartitionMiniMap="\"Object\" "
 BillboardComponent="\"Object\" "
 
 [MRU]
-MRUItem0=/Game/Maps/0_MenuMap
-MRUItem1=/Game/Maps/Level2
-MRUItem2=/Game/Maps/Level_2
-MRUItem3=/Game/Maps/Prototypes/ThirdPersonTemplate
-MRUItem4=/Game/Maps/Prototypes/ThirdPersonTemplate_WithoutFloor
-MRUItem5=/Game/Maps/Prototypes/ThirdPersonTemplate_PhysicsActors
-MRUItem6=/Game/Maps/Level1
+MRUItem0=/Game/Maps/Level2
+MRUItem1=/Game/Maps/Level1
+MRUItem2=/Game/Maps/Prototypes/ThirdPersonTemplate
+MRUItem3=/Game/Maps/Prototypes/ThirdPersonTemplate_PhysicsActors
+MRUItem4=/Game/Maps/0_MenuMap
+MRUItem5=/Game/Maps/Level_2
+MRUItem6=/Game/Maps/Prototypes/ThirdPersonTemplate_WithoutFloor
 MRUItem7=/Game/Maps/Level_23
 MRUItem8=/Game/Maps/NewWorld
 MRUItem9=/Game/Maps/Level1_2
@@ -1433,8 +1444,8 @@ ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
 
 [PlacementMode]
-RecentlyPlaced=/Script/Engine.LevelInstance;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Script/Engine.LevelInstance;
 RecentlyPlaced=/Game/Meshes/SM_Cube.SM_Cube;
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 RecentlyPlaced=/Script/TheSimulation.GoalReach;
@@ -1461,6 +1472,7 @@ PostProcessVolume.Actor=False
 WorldSettings.World=True
 WorldSettings.WorldPartition=True
 GoalReach.Actor=True
+StaticMeshActor.HLOD=False
 
 [AssetEditorToolkitTabLocation]
 /Game/Maps/0_MenuMap.0_MenuMap:PersistentLevel.0_MenuMap=1
@@ -1479,6 +1491,7 @@ GoalReach.Actor=True
 /Game/Maps/Level_2.Level_2:PersistentLevel.Level=1
 /Game/Maps/Level_2.Level_2:PersistentLevel.Level_2=1
 /Game/ModuleEITP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=1
+/Game/Maps/Level2.Level2:PersistentLevel.Level2=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1524,14 +1537,14 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Maps/0_MenuMap
-MRUItem1=/Game/Maps/Level2
-MRUItem2=/Game/ModuleEITP/Blueprints/ThirdPersonCharacter
-MRUItem3=/Game/Maps/Level_2
-MRUItem4=/Game/Maps/Prototypes/ThirdPersonTemplate
-MRUItem5=/Game/Maps/Prototypes/ThirdPersonTemplate_WithoutFloor
-MRUItem6=/Game/Maps/Prototypes/ThirdPersonTemplate_PhysicsActors
-MRUItem7=/Game/Maps/Level1
+MRUItem0=/Game/Maps/Level2
+MRUItem1=/Game/Maps/Level1
+MRUItem2=/Game/Maps/Prototypes/ThirdPersonTemplate
+MRUItem3=/Game/Maps/Prototypes/ThirdPersonTemplate_PhysicsActors
+MRUItem4=/Game/Maps/0_MenuMap
+MRUItem5=/Game/ModuleEITP/Blueprints/ThirdPersonCharacter
+MRUItem6=/Game/Maps/Level_2
+MRUItem7=/Game/Maps/Prototypes/ThirdPersonTemplate_WithoutFloor
 MRUItem8=/Game/Maps/Level_23
 MRUItem9=/Game/Maps/NewWorld
 MRUItem10=/Game/Maps/Level1_2
@@ -2462,7 +2475,7 @@ MovieSceneCapture.TimeStamp=2022.09.29-01.19.34
 MovieSceneCapture.LastCompileMethod=Unknown
 BlueprintGraph.TimeStamp=2022.09.29-01.19.28
 BlueprintGraph.LastCompileMethod=Unknown
-TheSimulation.TimeStamp=2022.10.10-22.22.19
+TheSimulation.TimeStamp=2022.10.11-01.41.28
 TheSimulation.LastCompileMethod=External
 RD.TimeStamp=2022.10.09-23.57.11
 RD.LastCompileMethod=Unknown
@@ -2494,7 +2507,7 @@ LastDirectory=
 RecentsFiles=E:/Software/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=MapCheck
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -2622,4 +2635,18 @@ bTextAssetFormatSupport=False
 bEnableLongPathsSupport=False
 bPackedLevelActor=True
 bLevelInstance=True
+
+[/Script/UnrealEd.EditorLoadingSavingSettings]
+bSCCUseGlobalSettings=False
+bAutomaticallyCheckoutOnAssetModification=False
+AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
+bForceCompilationAtStartup=False
+bRestoreOpenAssetTabsOnRestart=False
+bMonitorContentDirectories=True
+AutoReimportThreshold=3.000000
+bAutoCreateAssets=True
+bAutoDeleteAssets=True
+bDetectChangesOnStartup=True
+bPromptBeforeAutoImporting=True
+bDeleteSourceFilesWithAssets=False
 
