Clean up repo setup

--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,9 @@ Saved/Crashes
 Saved/MaterialStats
 Saved/MaterialStatsDebug
 Saved/Logs
-Saved/SaveGames/Default.sav
+Saved/SaveGames
 Saved/Shaders
 Saved/StagedBuilds
 Saved/Temp
 Saved/WorldPartition
+Intermediate/TurnkeyReport_0.log
